:bug: Fix Select notFound align issue
close #15567

close #14422 again

--- a/components/empty/style/index.less
+++ b/components/empty/style/index.less
@@ -43,9 +43,3 @@
     }
   }
 }
-
-// Patch for popup adjust
-.@{ant-prefix}-select-dropdown--empty .@{ant-prefix}-select-dropdown-menu-item {
-  padding-right: 0;
-  padding-left: 0;
-}
